# Nicholson-Prinz-JOV-DNNs-bio-vis

./: .gitignore  README.md  environment.yml  pyproject.toml  spec-file.txt
data/: nih-chest-xray-mean-std.json
data/Visual_Search_Difficulty_v1.0/: VSD-dataset-split-searchstims-car.csv  VSD-dataset-split-searchstims-cat.csv  VSD-dataset-split-searchstims-chair.csv  VSD-dataset-split-searchstims-dog.csv  VSD-dataset-split-searchstims-person.csv
data/checkpoints/vgg16_celeba_spoof/: train.sh
data/configs/VSD/: VSD_VGG16_transfer_searchstims_CE_largest.ini  VSD_alexnet_transfer_searchstims_CE_largest.ini
docs/: CHANGELOG.md
results/VSD/source_data/: VSD-searchstims-acc-v-set-size.csv  acc_v_r_coeff-formatted-for-word.xlsx  acc_v_r_coeff.csv  acc_v_r_coeff.xlsx  all_test_results.csv  all_test_results_long_form.csv  test_results_source_dataset-formatted-Word.xlsx  test_results_source_dataset.csv  test_results_table_initialize.csv  test_results_table_initialize.xlsx  test_results_table_initialize_mean_sd_single_col.csv  test_results_table_initialize_mean_sd_single_col.xlsx  test_results_table_transfer-format-word.xlsx  test_results_table_transfer.csv  test_results_table_transfer.xlsx  test_results_table_transfer_mean_sd_single_col-formatted-word.xlsx  test_results_table_transfer_mean_sd_single_col.csv  (+21 more)
src/detection/: __init__.py  collate.py  datasets.py  engine.py  learning_rate.py  loss_reduction.py  metric_logging.py  metrics.py  model.py  results_dir.py  timestamp.py  transforms.py
src/scripts/: compare-searchstims-VSD.ipynb  runall.sh
(+373 files in other folders)
