[tool.poetry]
name = "nicholson-prinz-2021"
version = "0.1.0"
description = "code for paper \"Task-optimized deep neural network models of visual search behavior\""
authors = ["NickleDave <nickledave@users.noreply.github.com>"]
license = "BSD"
classifiers = [
        'License :: OSI Approved :: BSD License',
        'Development Status :: 5 - Production/Stable',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: Implementation :: CPython'
]
readme = 'README.md'
homepage = 'https://github.com/NickleDave/Nicholson-Prinz-2021'
packages = [
    { include = "detection", from = "src" },
]

[tool.poetry.dependencies]
python = ">3.7.1, <3.10"
searchstims = {path = "../searchstims", develop = true}
visual-search-nets = {path = "../visual-search-nets", develop = true}
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
